[gd_scene load_steps=16 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://addons/MeshBuilder/MeshBuilder.gd" type="Script" id=2]
[ext_resource path="res://scripts/toolswindow.gd" type="Script" id=3]
[ext_resource path="res://scripts/3DView.gd" type="Script" id=4]
[ext_resource path="res://scripts/UI/CubeCreate.gd" type="Script" id=5]
[ext_resource path="res://scripts/UI/menubar/App.gd" type="Script" id=6]
[ext_resource path="res://scripts/camera.gd" type="Script" id=7]
[ext_resource path="res://assets/ui/mb-bg.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 2
border_width_top = 2
border_color = Color( 0.58, 0.58, 0.58, 1 )
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 2.0

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.26, 0.26, 0.26, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_color = Color( 0.15, 0.15, 0.15, 1 )
shadow_color = Color( 0.75, 0.75, 0.75, 1 )
shadow_size = 2
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 30, 30 )

[sub_resource type="Theme" id=4]
MenuButton/styles/hover = SubResource( 2 )
MenuButton/styles/normal = SubResource( 5 )
MenuButton/styles/pressed = SubResource( 6 )
Panel/styles/panel = SubResource( 7 )

[sub_resource type="Theme" id=1]
MenuButton/styles/normal = null

[sub_resource type="Environment" id=8]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 13
size_flags_vertical = 13

[node name="Main" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 13
size_flags_vertical = 13
custom_constants/separation = 0
collapsed = true
dragger_visibility = 1

[node name="Panel" type="Panel" parent="Main"]
margin_right = 1366.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )
theme = SubResource( 4 )

[node name="MenuBar" type="HBoxContainer" parent="Main/Panel"]
margin_right = 1366.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 10

[node name="App" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 30 )
icon = ExtResource( 1 )
expand_icon = true
items = [ "Quit", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 6 )

[node name="File" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 50.0
margin_right = 100.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
theme = SubResource( 1 )
text = "File"
flat = false
items = [ "New Map", null, 0, false, false, 0, 0, null, "", false, "New Map from Template", null, 0, false, false, 1, 0, null, "", false, "Open file", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, 3, 0, null, "", true, "Save", null, 0, false, false, 4, 0, null, "", false, "Save As", null, 0, false, false, 5, 0, null, "", false, "", null, 0, false, false, 6, 0, null, "", true, "Run Map", null, 0, false, false, 7, 0, null, "", false, "", null, 0, false, false, 8, 0, null, "", true, "Close", null, 0, false, false, 9, 0, null, "", false ]
switch_on_hover = true

[node name="Edit" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 110.0
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "Edit"
flat = false
switch_on_hover = true

[node name="Map" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 170.0
margin_right = 220.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "Map"
flat = false
switch_on_hover = true

[node name="View" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 230.0
margin_right = 280.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "View"
flat = false
switch_on_hover = true

[node name="Tools" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 290.0
margin_right = 340.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "Tools"
flat = false
switch_on_hover = true

[node name="Prefabs" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 350.0
margin_right = 401.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "Prefabs"
flat = false
switch_on_hover = true

[node name="Help" type="MenuButton" parent="Main/Panel/MenuBar"]
margin_left = 411.0
margin_right = 461.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
focus_mode = 2
theme = SubResource( 1 )
text = "Help"
flat = false
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true

[node name="ToolsView" type="Control" parent="Main"]
margin_top = 43.0
margin_right = 1366.0
margin_bottom = 768.0

[node name="Tools" type="VBoxContainer" parent="Main/ToolsView"]
margin_left = 7.0
margin_top = 7.0
margin_right = 94.0
margin_bottom = 726.0
rect_pivot_offset = Vector2( -835, -91 )
script = ExtResource( 3 )

[node name="CreateCube" type="Button" parent="Main/ToolsView/Tools"]
margin_right = 87.0
margin_bottom = 71.0
rect_min_size = Vector2( 87, 71 )
text = "Cube"
clip_text = true

[node name="3DView" type="Panel" parent="Main/ToolsView"]
margin_left = 110.0
margin_top = 7.0
margin_right = 1366.0
margin_bottom = 726.0
rect_pivot_offset = Vector2( -628, 502 )
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="Main/ToolsView/3DView"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true

[node name="Viewport" type="Viewport" parent="Main/ToolsView/3DView/ViewportContainer"]
size = Vector2( 1256, 719 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="Main/ToolsView/3DView/ViewportContainer/Viewport"]
script = ExtResource( 7 )

[node name="CubeCreate" type="WindowDialog" parent="."]
visible = true
margin_left = 49.0
margin_top = 253.0
margin_right = 276.0
margin_bottom = 569.0
window_title = "Create Cube"
script = ExtResource( 5 )

[node name="Create" type="Button" parent="CubeCreate"]
margin_left = 65.0
margin_top = 286.0
margin_right = 154.0
margin_bottom = 306.0
text = "Create Cube"

[node name="Pos" type="VBoxContainer" parent="CubeCreate"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_top = 18.0
margin_right = 65.0
margin_bottom = 98.0

[node name="X" type="Label" parent="CubeCreate/Pos"]
margin_right = 130.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 24 )
text = "X:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Pos/X"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "0"

[node name="Y" type="Label" parent="CubeCreate/Pos"]
margin_top = 28.0
margin_right = 130.0
margin_bottom = 52.0
rect_min_size = Vector2( 130, 24 )
text = "Y:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Pos/Y"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "0"

[node name="Z" type="Label" parent="CubeCreate/Pos"]
margin_top = 56.0
margin_right = 130.0
margin_bottom = 80.0
rect_min_size = Vector2( 130, 24 )
text = "Z:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Pos/Z"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "0"

[node name="Size" type="VBoxContainer" parent="CubeCreate"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_top = 116.0
margin_right = 65.0
margin_bottom = 196.0

[node name="L" type="Label" parent="CubeCreate/Size"]
margin_right = 130.0
margin_bottom = 24.0
rect_min_size = Vector2( 130, 24 )
text = "L:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Size/L"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "1"

[node name="W" type="Label" parent="CubeCreate/Size"]
margin_top = 28.0
margin_right = 130.0
margin_bottom = 52.0
rect_min_size = Vector2( 130, 24 )
text = "W:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Size/W"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "1"

[node name="H" type="Label" parent="CubeCreate/Size"]
margin_top = 56.0
margin_right = 130.0
margin_bottom = 80.0
rect_min_size = Vector2( 130, 24 )
text = "H:"

[node name="LineEdit" type="LineEdit" parent="CubeCreate/Size/H"]
margin_left = 35.0
margin_right = 129.0
margin_bottom = 24.0
text = "1"

[node name="3dEnv" type="Spatial" parent="."]

[node name="MeshBuilder" type="Spatial" parent="3dEnv"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="3dEnv"]
environment = SubResource( 8 )

[connection signal="pressed" from="Main/ToolsView/Tools/CreateCube" to="Main/ToolsView/Tools" method="_on_CreateCube_pressed"]
[connection signal="focus_entered" from="Main/ToolsView/3DView" to="Main/ToolsView/3DView" method="_on_3DView_focus_entered"]
[connection signal="focus_exited" from="Main/ToolsView/3DView" to="Main/ToolsView/3DView" method="_on_3DView_focus_exited"]
[connection signal="mouse_entered" from="Main/ToolsView/3DView/ViewportContainer" to="Main/ToolsView/3DView" method="_on_ViewportContainer_mouse_entered"]
[connection signal="mouse_exited" from="Main/ToolsView/3DView/ViewportContainer" to="Main/ToolsView/3DView" method="_on_ViewportContainer_mouse_exited"]
[connection signal="pressed" from="CubeCreate/Create" to="CubeCreate" method="_on_Create_pressed"]
